sjengida/c0/main
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/main/src/sjeng.c:640:8: error: too many arguments to function call, expected 0, have 1
think( &v14); 
~~~~~  ^~~~
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/main/src/protos.h:63:1: note: 'think' declared here
move_s think (void);
^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/main/src/sjeng.c:782:8: error: too many arguments to function call, expected 0, have 1
think( &v13); 
~~~~~  ^~~~
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/main/src/protos.h:63:1: note: 'think' declared here
move_s think (void);
^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/main/src/sjeng.c:842:27: error: use of undeclared identifier 'off_428D0D'
else if ( !strcmp( input, off_428D0D) ) 
                          ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/main/src/sjeng.c:1025:8: error: too many arguments to function call, expected 0, have 1
think( &v12); 
~~~~~  ^~~~
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/main/src/protos.h:63:1: note: 'think' declared here
move_s think (void);
^
4 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/main/src/obj/sjeng.o] Error 1
